--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
+# Virtual environment
 .venv/
+env/
+
+# Python cache
 __pycache__/
 *.pyc
+
+# Environment files
 .env
+
+# Database
 db.sqlite3
+
+# Django media and static (optional)
+media/
+staticfiles/
+
+# MacOS system files
 .DS_Store
+
